modified:   .gitignore 	modified:   src/main/java/com/example/cc/CcApplication.java 	new file:   src/main/java/com/example/cc/CrawledDataController.java 	modified:   src/main/resources/static/charts.html 	modified:   src/main/resources/static/details.html 	modified:   src/main/resources/static/details2.html 	modified:   src/main/resources/static/index.html 	modified:   src/main/resources/static/tables.html 	new file:   src/main/resources/templates/index.html

--- a/src/main/resources/static/details2.html
+++ b/src/main/resources/static/details2.html
@@ -162,6 +162,7 @@
             <th>表名</th>
             <th>运行参数</th>
             <th>程序地址</th>
+            <th>查看数据</th>
           </tr>
           </thead>
           <tbody>
@@ -175,6 +176,7 @@
             <td>aiqiyi_zongyi2</td>
             <td>aiqiyi</td>
             <td>/home/jar/crawler_test.jar</td>
+            <td><a href="/tables" class="btn btn-primary btn-sm">查看数据</a></td>
           </tr>
           <tr>
             <td scope="row">1</td>
@@ -186,6 +188,7 @@
             <td>aiqiyi_zongyi2</td>
             <td>aiqiyi</td>
             <td>/home/jar/crawler_test.jar</td>
+            <td><a href="/tables" class="btn btn-primary btn-sm">查看数据</a></td>
           </tr>
           <tr>
             <td scope="row">1</td>
@@ -197,6 +200,7 @@
             <td>aiqiyi_zongyi2</td>
             <td>aiqiyi</td>
             <td>/home/jar/crawler_test.jar</td>
+            <td><a href="/tables" class="btn btn-primary btn-sm">查看数据</a></td>
           </tr>
           </tbody>
         </table>
