new file:   file/userinfo         modified:   src/main/java/com/example/cc/ccapplication.java         modified:   src/main/java/com/example/cc/crawleddatacontroller.java         new file:   src/main/java/com/example/cc/userinfo.java         modified:   src/main/resources/static/charts.html         modified:   src/main/resources/static/details.html         modified:   src/main/resources/static/details2.html         modified:   src/main/resources/static/js/demo/datatables-demo.js         modified:   src/main/resources/static/newcrawler.html         modified:   src/main/resources/static/register.html         modified:   src/main/resources/static/tables.html         deleted:    src/main/resources/templates/index.html         new file:   src/main/resources/templates/tables.html

--- a/src/main/resources/static/details.html
+++ b/src/main/resources/static/details.html
@@ -155,7 +155,7 @@
             <h4>爬虫管理</h4>
             <!-- Modal -->
             <div style="float: right; margin-bottom: 10px;">
-                <a href="newcrawler.html" type="button" class="btn btn-success btn-sm">部署</a>
+                <a class="btn btn-success btn-sm" href="newcrawler.html">部署</a>
                 <button type="button" class="btn btn-danger btn-sm">删除</button>
                 <br>
             </div>
@@ -253,7 +253,6 @@
 
 
 <script>
-
     var tbody = '';
     $.getJSON('/crawlersimpleinfo.json', function (data) {
         for (var i = 0; i < data.length; i++) {
@@ -284,7 +283,6 @@
     })
 
 </script>
-
 
 </body>
 
