--- a/src/main/resources/static/details2.html
+++ b/src/main/resources/static/details2.html
@@ -176,7 +176,7 @@
             <td>aiqiyi_zongyi2</td>
             <td>aiqiyi</td>
             <td>/home/jar/crawler_test.jar</td>
-            <td><a href="/tables" class="btn btn-primary btn-sm">查看数据</a></td>
+            <td><a href="/tables?id=345" class="btn btn-primary btn-sm">查看数据</a></td>
           </tr>
           <tr>
             <td scope="row">1</td>
@@ -188,7 +188,7 @@
             <td>aiqiyi_zongyi2</td>
             <td>aiqiyi</td>
             <td>/home/jar/crawler_test.jar</td>
-            <td><a href="/tables" class="btn btn-primary btn-sm">查看数据</a></td>
+            <td><a href="/tables?id=356" class="btn btn-primary btn-sm">查看数据</a></td>
           </tr>
           <tr>
             <td scope="row">1</td>
@@ -200,7 +200,7 @@
             <td>aiqiyi_zongyi2</td>
             <td>aiqiyi</td>
             <td>/home/jar/crawler_test.jar</td>
-            <td><a href="/tables" class="btn btn-primary btn-sm">查看数据</a></td>
+            <td><a href="/tables?id=129" class="btn btn-primary btn-sm">查看数据</a></td>
           </tr>
           </tbody>
         </table>
