--- a/src/main/resources/static/tables.html
+++ b/src/main/resources/static/tables.html
@@ -133,7 +133,7 @@
           <!-- Breadcrumbs-->
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="#">控制台</a>
+              <a href="index.html">控制台</a>
             </li>
             <li class="breadcrumb-item active">表单</li>
           </ol>
